--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,15 +1,15 @@
 .App {
   text-align: center;
+  padding: 1em 0 1em 0;
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.AuthModalToggle {
+  margin: 1em;
+}
+
+.MainContainer {
+  margin-bottom: 2em;
 }
